--- a/src/app.html
+++ b/src/app.html
@@ -25,6 +25,10 @@
 				font-family: 'DM Sans', sans-serif;
 				font-optical-sizing: auto;
 			}
+			.btn-primary {
+				background-color: #a1c398;
+				border: none;
+			}
 		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -32,5 +36,6 @@
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
+		<script src="https://kit.fontawesome.com/90396aba6b.js"></script>
 	</body>
 </html>
