--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,10 @@
 			href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<svelte:head>
 			<title>Docktr</title>
@@ -21,6 +25,13 @@
 		</svelte:head>
 		<!-- %sveltekit.head% -->
 		<style type="text/css">
+			.material-symbols-outlined {
+				font-variation-settings:
+					'FILL' 0,
+					'wght' 200,
+					'GRAD' 0,
+					'opsz' 24;
+			}
 			body {
 				font-family: 'DM Sans', sans-serif;
 				font-optical-sizing: auto;
@@ -29,6 +40,20 @@
 				background-color: #a1c398;
 				border: none;
 			}
+			.mobileOnly {
+				display: none;
+			}
+			.pcOnly {
+				display: inline-block;
+			}
+			@media screen and (max-width: 992px) {
+				.mobileOnly {
+					display: inline-block;
+				}
+				.pcOnly {
+					display: none;
+				}
+			}
 		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -36,6 +61,5 @@
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
-		<script src="https://kit.fontawesome.com/90396aba6b.js"></script>
 	</body>
 </html>
