--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
 		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -46,6 +46,16 @@
 			.pcOnly {
 				display: inline-block;
 			}
+			.jumbotron {
+				padding-inline: 2rem;
+				justify-content: center;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+			}
+			.lead {
+				color: #7d7d7d;
+			}
 			@media screen and (max-width: 992px) {
 				.mobileOnly {
 					display: inline-block;
@@ -54,12 +64,16 @@
 					display: none;
 				}
 			}
+			@media (min-width: 1200px) {
+				.display-4 {
+					font-size: 3rem;
+				}
+			}
 		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
