--- a/src/app.html
+++ b/src/app.html
@@ -69,6 +69,29 @@
 					font-size: 3rem;
 				}
 			}
+			/* SCROLLBAR */
+			::-webkit-scrollbar {
+				width: 6px;
+				background: transparent;
+				transition: 0.3s ease;
+				height: 6px;
+			}
+
+			::-webkit-scrollbar:hover {
+				width: 6px;
+			}
+
+			::-webkit-scrollbar-thumb {
+				background-color: #71896b;
+				border-radius: 5px;
+				transition: 0.3s ease;
+				height: 10px;
+				width: 3px;
+			}
+
+			::-webkit-scrollbar-thumb:hover {
+				background-color: #394636;
+			}
 		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
