--- a/src/app.html
+++ b/src/app.html
@@ -68,6 +68,9 @@
 				.display-4 {
 					font-size: 3rem;
 				}
+				.w-md-50 {
+					width: 50%;
+				}
 			}
 			/* SCROLLBAR */
 			::-webkit-scrollbar {
