--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 		/>
-		<style type="text/css">
+		<style>
 			.material-symbols-outlined {
 				font-variation-settings:
 					'FILL' 0,
@@ -62,11 +62,11 @@
 				transition: 0.3s ease;
 				height: 6px;
 			}
-
+		
 			::-webkit-scrollbar:hover {
 				width: 6px;
 			}
-
+		
 			::-webkit-scrollbar-thumb {
 				background-color: #71896b;
 				border-radius: 5px;
@@ -74,7 +74,7 @@
 				height: 10px;
 				width: 3px;
 			}
-
+		
 			::-webkit-scrollbar-thumb:hover {
 				background-color: #394636;
 			}
@@ -97,7 +97,7 @@
 		</svelte:head>
 		<!-- %sveltekit.head% -->
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" style="background-color: aliceblue;">
 		<div style="display: contents">%sveltekit.body%</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
