--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,58 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<style>
+			:root {
+				--primaryColor: #a1c398;
+				--bs-nav-pills-link-active-bg: var(--primaryColor) !important;
+			}
+			.homeNav .active {
+				background-color: var(--primaryColor) !important;
+				border-radius: 40px;
+				padding-block: 10px;
+				overflow: hidden;
+			}
+			.homeNav {
+				background: white;
+				border-radius: 40px;
+				overflow: hidden;
+			}
+			.homeNav .nav-link {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				gap: 0.3rem;
+				transition-duration: 0.3s;
+				color: #415d3a;
+				border-radius: 40px;
+				overflow: hidden;
+				padding-block: 15px;
+			}
+			.navbar {
+				min-height: 58px;
+			}
+			.branches {
+				display: flex;
+				gap: 1rem;
+				overflow-x: scroll;
+				padding-block: 1rem;
+				padding-left: 3px;
+			}
+			.card {
+				flex: 1;
+				min-width: 10rem;
+				min-height: 10rem;
+				border: 0px;
+				box-shadow: 0px 0px 5px #00000012;
+				border-radius: 20px;
+				cursor: pointer;
+			}
+			@media screen and (min-width: 992px) {
+				.navbar-collapse {
+					flex: none !important;
+				}
+			}
+		</style>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -20,7 +72,7 @@
 				font-optical-sizing: auto;
 			}
 			.btn-primary {
-				background-color: #a1c398;
+				background-color: var(--primaryColor);
 				border: none;
 			}
 			.mobileOnly {
@@ -62,11 +114,11 @@
 				transition: 0.3s ease;
 				height: 6px;
 			}
-		
+
 			::-webkit-scrollbar:hover {
 				width: 6px;
 			}
-		
+
 			::-webkit-scrollbar-thumb {
 				background-color: #71896b;
 				border-radius: 5px;
@@ -74,7 +126,7 @@
 				height: 10px;
 				width: 3px;
 			}
-		
+
 			::-webkit-scrollbar-thumb:hover {
 				background-color: #394636;
 			}
@@ -97,7 +149,7 @@
 		</svelte:head>
 		<!-- %sveltekit.head% -->
 	</head>
-	<body data-sveltekit-preload-data="hover" style="background-color: aliceblue;">
+	<body data-sveltekit-preload-data="hover" style="background-color: aliceblue">
 		<div style="display: contents">%sveltekit.body%</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
