--- a/src/app.html
+++ b/src/app.html
@@ -12,12 +12,6 @@
 			body {
 				scrollbar-gutter: stable;
 			}
-			.homeNav .active {
-				background-color: var(--primaryColor) !important;
-				border-radius: 40px;
-				padding-block: 10px;
-				overflow: hidden;
-			}
 			.homeNav {
 				background: white;
 				border-radius: 40px;
@@ -54,6 +48,12 @@
 				cursor: pointer;
 			}
 			@media screen and (min-width: 992px) {
+				.homeNav .active {
+					background-color: var(--primaryColor) !important;
+					border-radius: 40px;
+					padding-block: 10px;
+					overflow: hidden;
+				}
 				.navbar-collapse {
 					flex: none !important;
 				}
@@ -72,6 +72,13 @@
 				font-variation-settings:
 					'FILL' 0,
 					'wght' 200,
+					'GRAD' 0,
+					'opsz' 24;
+			}
+			.icon-fill {
+				font-variation-settings:
+					'FILL' 1,
+					'wght' 300,
 					'GRAD' 0,
 					'opsz' 24;
 			}
