--- a/src/app.html
+++ b/src/app.html
@@ -83,6 +83,8 @@
 					'opsz' 24;
 			}
 			body {
+				max-width: 100vw;
+				overflow-x: hidden;
 				font-family: 'DM Sans', sans-serif;
 				font-optical-sizing: auto;
 			}
