--- a/src/app.html
+++ b/src/app.html
@@ -92,6 +92,9 @@
 				background-color: var(--primaryColor);
 				border: none;
 			}
+			.btn-primary:hover {
+				background-color: #607e59;
+			}
 			.mobileOnly {
 				display: none;
 			}
@@ -151,7 +154,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap&family=Tac+One&display=swap"
+			href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap&family=Alumni+Sans&display=swap"
 			rel="stylesheet"
 		/>
 		<link
@@ -160,8 +163,8 @@
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<svelte:head>
-			<title>Docktr</title>
-			<meta name="description" content="Docktr - Find and connect with doctors around the world" />
+			<title>Sehiyye.net</title>
+			<meta name="description" content="Sağlık Hizmetlerine Dijital Yaklaşım" />
 		</svelte:head>
 		<!-- %sveltekit.head% -->
 	</head>
