--- a/src/app.html
+++ b/src/app.html
@@ -163,7 +163,7 @@
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<svelte:head>
-			<title>Sehiyye.net</title>
+			<title>Sehiyye.online</title>
 			<meta name="description" content="Sağlık Hizmetlerine Dijital Yaklaşım" />
 		</svelte:head>
 		<!-- %sveltekit.head% -->
