v$(node -p -e require('../package.json').version)

--- a/src/app.html
+++ b/src/app.html
@@ -42,7 +42,7 @@
 				flex: 1;
 				min-width: 10rem;
 				min-height: 10rem;
-				border: 0px;
+				border: 0px!important;
 				box-shadow: 0px 0px 5px #00000012;
 				border-radius: 20px;
 				cursor: pointer;
@@ -94,6 +94,15 @@
 			}
 			.btn-primary:hover {
 				background-color: #607e59;
+			}
+			.btn-outline-primary {
+				border: 0px !important;
+				box-shadow: 0px 0px 5px 0px #a1c398a1;
+				color: #678b5e;
+			}
+			.btn-outline-primary:hover {
+				background: var(--primaryColor);
+				color: white;
 			}
 			.mobileOnly {
 				display: none;
