--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="theme-color" content="#a1c398" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<style>
 			:root {
@@ -42,7 +43,7 @@
 				flex: 1;
 				min-width: 10rem;
 				min-height: 10rem;
-				border: 0px!important;
+				border: 0px !important;
 				box-shadow: 0px 0px 5px #00000012;
 				border-radius: 20px;
 				cursor: pointer;
