--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="theme-color" content="#a1c398" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+		/>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<style>
 			:root {
