--- a/src/app.html
+++ b/src/app.html
@@ -72,6 +72,12 @@
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 		/>
+		<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 		<style>
 			.material-symbols-outlined {
 				font-variation-settings:
@@ -140,6 +146,12 @@
 				.w-md-50 {
 					width: 50%;
 				}
+			}
+			.flex-1 {
+				flex:1;
+			}
+			.cursor-pointer {
+				cursor: pointer;
 			}
 			/* SCROLLBAR */
 			::-webkit-scrollbar {
