--- a/src/app.html
+++ b/src/app.html
@@ -67,6 +67,11 @@
 					overflow: hidden;
 				}
 			}
+			@media screen and (max-width: 992px) {
+				.footer {
+					margin-bottom: 50px;
+				}
+			}
 		</style>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -142,7 +147,7 @@
 				}
 			}
 			.flex-1 {
-				flex:1;
+				flex: 1;
 			}
 			.cursor-pointer {
 				cursor: pointer;
