--- a/src/app.html
+++ b/src/app.html
@@ -191,6 +191,17 @@
 			<title>Sehiyye.online</title>
 			<meta name="description" content="Sağlık Hizmetlerine Dijital Yaklaşım" />
 		</svelte:head>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-GDF5WMF98Y"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-GDF5WMF98Y');
+		</script>
 		<!-- %sveltekit.head% -->
 	</head>
 	<body data-sveltekit-preload-data="hover" style="background-color: aliceblue">
