--- a/src/app.html
+++ b/src/app.html
@@ -175,6 +175,34 @@
 			::-webkit-scrollbar-thumb:hover {
 				background-color: #394636;
 			}
+			/* BTN LOADING ICON */
+			.btnLoader {
+				position: relative;
+				padding: .5rem;
+			}
+
+			.loader {
+				width: 25px;
+				padding: 8px !important;
+				aspect-ratio: 1;
+				border-radius: 50%;
+				background: #ffffff;
+				--_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+				-webkit-mask: var(--_m);
+				mask: var(--_m);
+				-webkit-mask-composite: source-out;
+				mask-composite: subtract;
+				animation: l3 1s infinite linear;
+				display: inline-block;
+				margin-left: 1rem;
+				position: absolute;
+				right: 3rem;
+			}
+			@keyframes l3 {
+				to {
+					transform: rotate(1turn);
+				}
+			}
 		</style>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
