--- a/src/app.html
+++ b/src/app.html
@@ -114,6 +114,9 @@
 				background: var(--primaryColor);
 				color: white;
 			}
+			.btn:active {
+				background-color: #7d9576!important;
+			}
 			.mobileOnly {
 				display: none;
 			}
@@ -232,7 +235,7 @@
 		</script>
 		<!-- %sveltekit.head% -->
 	</head>
-	<body data-sveltekit-preload-data="hover" style="background-color: aliceblue">
+	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
