v$(node -p -e require('../package.json').version)

--- a/src/app.html
+++ b/src/app.html
@@ -135,10 +135,10 @@
 			}
 			@media screen and (max-width: 992px) {
 				.mobileOnly {
-					display: inline-block;
+					display: inline-block!important;
 				}
 				.pcOnly {
-					display: none;
+					display: none!important;
 				}
 			}
 			@media (min-width: 1200px) {
