--- a/src/app.html
+++ b/src/app.html
@@ -46,7 +46,6 @@
 			.card {
 				flex: 1;
 				min-width: 10rem;
-				min-height: 10rem;
 				border: 0px !important;
 				box-shadow: 0px 0px 5px #00000012;
 				border-radius: 20px;
@@ -117,7 +116,10 @@
 			.btn:active {
 				background-color: #7d9576 !important;
 			}
-			.mobileOnly {
+			.btn:disabled {
+				background-color: var(--primaryColor)!important;
+			}
+ 			.mobileOnly {
 				display: none;
 			}
 			.pcOnly {
