--- a/src/app.html
+++ b/src/app.html
@@ -109,15 +109,12 @@
 				box-shadow: 0px 0px 5px 0px #a1c398a1;
 				color: #678b5e;
 			}
-			.btn-outline-primary:hover {
+			.btn-outline-primary:hover, .btn:disabled {
 				background: var(--primaryColor);
 				color: white;
 			}
 			.btn:active {
 				background-color: #7d9576 !important;
-			}
-			.btn:disabled {
-				background-color: var(--primaryColor)!important;
 			}
  			.mobileOnly {
 				display: none;
