--- a/src/app.html
+++ b/src/app.html
@@ -71,6 +71,11 @@
 					margin-bottom: 50px;
 				}
 			}
+			@media screen and (max-width: 768px) {
+				.mt-mobile {
+					margin-top: 1rem!important;
+				}
+			}
 		</style>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -109,14 +114,15 @@
 				box-shadow: 0px 0px 5px 0px #a1c398a1;
 				color: #678b5e;
 			}
-			.btn-outline-primary:hover, .btn:disabled {
+			.btn-outline-primary:hover,
+			.btn:disabled {
 				background: var(--primaryColor);
 				color: white;
 			}
 			.btn:active {
 				background-color: #7d9576 !important;
 			}
- 			.mobileOnly {
+			.mobileOnly {
 				display: none;
 			}
 			.pcOnly {
