--- a/src/app.html
+++ b/src/app.html
@@ -73,7 +73,7 @@
 			}
 			@media screen and (max-width: 768px) {
 				.mt-mobile {
-					margin-top: 1rem!important;
+					margin-top: 1rem !important;
 				}
 			}
 		</style>
@@ -255,7 +255,7 @@
 		</script>
 		<!-- %sveltekit.head% -->
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" style="background-color: rgb(240 240 240 / 45%)">
 		<div style="display: contents">%sveltekit.body%</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
