--- a/src/app.html
+++ b/src/app.html
@@ -8,225 +8,28 @@
 			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
 		/>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<style>
-			:root {
-				--primaryColor: #a1c398;
-				--bs-nav-pills-link-active-bg: var(--primaryColor) !important;
-			}
-			html,
-			body {
-				scrollbar-gutter: stable;
-			}
-			.homeNav {
-				background: white;
-				border-radius: 40px;
-				overflow: hidden;
-			}
-			.homeNav .nav-link {
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				gap: 0.3rem;
-				transition-duration: 0.3s;
-				color: #415d3a;
-				border-radius: 40px;
-				overflow: hidden;
-				padding-block: 15px;
-			}
-			.navbar {
-				min-height: 58px;
-			}
-			.branches {
-				display: flex;
-				gap: 1rem;
-				overflow-x: scroll;
-				padding-block: 1rem;
-				padding-left: 3px;
-			}
-			.card {
-				flex: 1;
-				min-width: 10rem;
-				border: 0px !important;
-				box-shadow: 0px 0px 5px #00000012;
-				border-radius: 20px;
-				cursor: pointer;
-			}
-			@media screen and (min-width: 992px) {
-				.homeNav .active {
-					background-color: var(--primaryColor) !important;
-					border-radius: 40px;
-					padding-block: 10px;
-					overflow: hidden;
-				}
-				.navbar-collapse {
-					flex: none !important;
-				}
-				.nav-item {
-					border-radius: 40px;
-					overflow: hidden;
-				}
-			}
-			@media screen and (max-width: 992px) {
-				.footer {
-					margin-bottom: 50px;
-				}
-			}
-			@media screen and (max-width: 768px) {
-				.mt-mobile {
-					margin-top: 1rem !important;
-				}
-			}
-		</style>
+		<link rel="preload" href="/style.css" as="style" />
+		<link
+			rel="preload"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			as="style"
+		/>
+		<link
+			rel="preload"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200..300,0..1,0"
+			as="style"
+		/>
+		<link
+			rel="preload"
+			href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,300..500&display=swap&family=Alumni+Sans&display=swap"
+			as="style"
+		/>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 		/>
-		<style>
-			.material-symbols-outlined {
-				font-variation-settings:
-					'FILL' 0,
-					'wght' 200,
-					'GRAD' 0,
-					'opsz' 24;
-			}
-			.icon-fill {
-				font-variation-settings:
-					'FILL' 1,
-					'wght' 300,
-					'GRAD' 0,
-					'opsz' 24;
-			}
-			body {
-				max-width: 100vw;
-				overflow-x: hidden;
-				font-family: 'DM Sans', sans-serif;
-				font-optical-sizing: auto;
-			}
-			.btn-primary {
-				background-color: var(--primaryColor);
-				border: none;
-			}
-			.btn-primary:hover {
-				background-color: #607e59;
-			}
-			.btn-outline-primary {
-				border: 0px !important;
-				box-shadow: 0px 0px 5px 0px #a1c398a1;
-				color: #678b5e;
-			}
-			.btn-outline-primary:hover,
-			.btn:disabled {
-				background: var(--primaryColor);
-				color: white;
-			}
-			.btn:active {
-				background-color: #7d9576 !important;
-			}
-			.mobileOnly {
-				display: none;
-			}
-			.pcOnly {
-				display: inline-block;
-			}
-			.jumbotron {
-				padding-inline: 2rem;
-				justify-content: center;
-				display: flex;
-				flex-direction: column;
-				align-items: center;
-			}
-			.lead {
-				color: #7d7d7d;
-			}
-			@media screen and (max-width: 992px) {
-				.mobileOnly {
-					display: inline-block !important;
-				}
-				.pcOnly {
-					display: none !important;
-				}
-			}
-			@media (min-width: 1200px) {
-				.display-4 {
-					font-size: 3rem;
-				}
-				.w-md-50 {
-					width: 50%;
-				}
-			}
-			.flex-1 {
-				flex: 1;
-			}
-			.cursor-pointer {
-				cursor: pointer;
-			}
-			/* SCROLLBAR */
-			::-webkit-scrollbar {
-				width: 6px;
-				background: transparent;
-				transition: 0.3s ease;
-				height: 6px;
-			}
+		<link rel="stylesheet" href="/style.css" />
 
-			::-webkit-scrollbar:hover {
-				width: 6px;
-			}
-
-			::-webkit-scrollbar-thumb {
-				background-color: #71896b;
-				border-radius: 5px;
-				transition: 0.3s ease;
-				height: 10px;
-				width: 3px;
-			}
-
-			::-webkit-scrollbar-thumb:hover {
-				background-color: #394636;
-			}
-			/* ANIMATIONS */
-			.anim-scale-down {
-				animation: anim-scale-down 0.1s linear;
-			}
-			@keyframes anim-scale-down {
-				0% {
-					opacity: 0;
-					transform: scale(1.1);
-				}
-				100% {
-					opacity: 1;
-					transform: scale(1);
-				}
-			}
-
-			/* BTN LOADING ICON */
-			.btnLoader {
-				position: relative;
-				padding: 0.5rem;
-			}
-
-			.loader {
-				width: 25px;
-				padding: 8px !important;
-				aspect-ratio: 1;
-				border-radius: 50%;
-				background: #ffffff;
-				--_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
-				-webkit-mask: var(--_m);
-				mask: var(--_m);
-				-webkit-mask-composite: source-out;
-				mask-composite: subtract;
-				animation: l3 1s infinite linear;
-				display: inline-block;
-				margin-left: 1rem;
-				position: absolute;
-				right: 3rem;
-			}
-			@keyframes l3 {
-				to {
-					transform: rotate(1turn);
-				}
-			}
-		</style>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
