--- a/src/app.html
+++ b/src/app.html
@@ -58,10 +58,7 @@
 		</script>
 		<!-- %sveltekit.head% -->
 	</head>
-	<body
-		data-sveltekit-preload-data="hover"
-		style="background-color: rgb(240 240 240 / 45%); overscroll-behavior-y: contain"
-	>
+	<body data-sveltekit-preload-data="hover" style="background-color: rgb(240 240 240 / 45%)">
 		<div style="display: contents">%sveltekit.body%</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
