--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<meta name="theme-color" content="#a1c398" />
 		<meta
 			name="viewport"
-			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+			content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
 		/>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="preload" href="/style.css" as="style" />
