--- a/src/error.html
+++ b/src/error.html
@@ -1,15 +1,53 @@
-<div
-	style="display: flex; align-items: center; justify-content: center; width: 100dvw; height: 100dvh"
->
-	<img
-		src="https://ik.imagekit.io/d2nwsj0ktvh/docktr/logo.png"
-		alt="Sehiyye logo"
-		style="width: 150px; margin-top: 1rem"
-	/>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="theme-color" content="#a1c398" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+		/>
+		<link
+			rel="preload"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			as="style"
+		/>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		<div
+			style="
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				width: 100dvw;
+				height: 100dvh;
+			"
+		>
+			<img
+				src="https://ik.imagekit.io/d2nwsj0ktvh/docktr/logo.png"
+				alt="Sehiyye logo"
+				style="width: 150px; margin-top: 3rem"
+			/>
 
-	<h5 style="margin-top: 1rem">Xəta baş verdi</h5>
+			<div class="d-flex flex-column gap-3 my-auto align-items-center">
+				<h5>Xəta baş verdi</h5>
+				<a class="btn btn-outline-primary" href="/">Ana Səhifəyə Qayıt</a>
+			</div>
+		</div>
+	</body>
+</html>
 
-	<div class="d-flex gap-3 mt-3" style="margin-top: 1rem">
-		<a class="btn btn-outline-primary" href="/">Ana Səhifəyə Qayıt</a>
-	</div>
-</div>
+<style>
+	.btn:not(:hover) {
+		color: green;
+		border-color: green;
+	}
+	.btn:hover {
+		background-color: green;
+		border-color: green;
+	}
+</style>
