v$(node -p -e require('../package.json').version)

--- a/src/app.html
+++ b/src/app.html
@@ -42,7 +42,7 @@
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<svelte:head>
-			<title>Sehiyye.online</title>
+			<title>Sehiyye.net</title>
 			<meta name="description" content="Sağlık Hizmetlerine Dijital Yaklaşım" />
 		</svelte:head>
 		<!-- Google tag (gtag.js) -->
